Added new tests to increase test coverage percentage, installed xdebug in api dockerfile, updated postman json file.
